[gd_scene load_steps=5 format=3 uid="uid://dkax421daj48j"]

[ext_resource type="Theme" uid="uid://bio0np2bdwycd" path="res://UI/Themes/my_label_theme.tres" id="1_2quuo"]
[ext_resource type="Script" path="res://ShowingControls/showing_controls.gd" id="1_jxte7"]
[ext_resource type="Theme" uid="uid://cepf0eeqt2mpk" path="res://UI/Themes/my_spinbox_theme.tres" id="2_3cfoy"]
[ext_resource type="Theme" uid="uid://wgr8ngf3t34r" path="res://UI/Themes/my_button_theme.tres" id="4_6vnyi"]

[node name="showing_controls" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 0.923
anchor_bottom = 0.62
offset_right = -551.56
offset_bottom = -638.6
theme_override_constants/separation = 28
script = ExtResource("1_jxte7")

[node name="StartTimeLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_2quuo")
text = "Start Time: "

[node name="StartHour" type="SpinBox" parent="."]
layout_mode = 2
theme = ExtResource("2_3cfoy")
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="SimiColon" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_2quuo")
text = ":"

[node name="StartMinute" type="SpinBox" parent="."]
layout_mode = 2
theme = ExtResource("2_3cfoy")
max_value = 59.0

[node name="AmPmOptionButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
popup/item_0/text = "AM"
popup/item_0/id = 0
popup/item_1/text = "PM"
popup/item_1/id = 1

[node name="RunTimeLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_2quuo")
text = "Run Time: "

[node name="RunHour" type="SpinBox" parent="."]
layout_mode = 2
theme = ExtResource("2_3cfoy")
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="SimiColon2" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_2quuo")
text = ":"

[node name="RunMinute" type="SpinBox" parent="."]
layout_mode = 2
theme = ExtResource("2_3cfoy")
max_value = 60.0

[node name="UpdateButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("4_6vnyi")
text = "Update"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = ExtResource("4_6vnyi")
text = "Delete"

[connection signal="pressed" from="UpdateButton" to="." method="_on_update_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
